--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>CPU Scheduling Algorithms Visualizer</title>
+    <meta name="description" content="An educational tool for understanding CPU scheduling algorithms in operating systems" />
   </head>
   <body>
     <div id="root"></div>
